# BUILDER

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DOMAIN_DEPTH_LEDGER.md  LESSONS.md  LICENSE  README.md  check_no_real_names.sh  conftest.py  index.html  min_example.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
apps/streamlit/: app.py
apps/web/: coefficients.json  core-bundle.js  core-runtime.js  core-runtime.worker.js  dashboard.html  demo-case.js  evaluator.html  guide.html  index.html  os-simulator.html  report.html  (+4 more)
docs/: GETTING_STARTED.md  STANDARD_WORKFLOW.md
governance/: DIAGNOSIS.md  JUDGMENT_RUBRICS.md  LETTER_TO_FUTURE_SESSIONS.md  MAINTENANCE.md  MODEL_DISPATCH.md  TASK_TEMPLATES.md  VERSION_POLICY.md
knowledge/: 00_FIRST_PRINCIPLES.md
schemas/: decision.schema.v0.1.json  household_outcome.schema.v0.1.json  project_schema.json  project_schema_v2.json  project_schema_v2_1.json  stakeholder_profile.schema.v0.1.json  strategy.schema.v0.1.json  workflow_schema.json  workflow_schema_v1_1.json
tests/: test_allocation.py  test_api.py  test_cashflow.py  test_core_bundle.py  test_decision.py  test_golden.py  test_headless.py  test_rights.py  test_schema_v2.py  test_strategy.py  test_valuation.py  test_workflow.py
tools/: build_core_bundle.py  build_demo_case.mjs  check_core_bundle.py  check_core_isolation.py  check_image_whitelist.py  check_schema_freeze.py  check_template.py  check_web_links.py  gen_examples_v2.py  make_template.py  都更全案投報_對照範本.xlsx
(+93 files in other folders)
